confik-macros/tests/trybuild/fail-default-not-expression.stderr
error: expected expression
 --> tests/trybuild/fail-default-not-expression.rs:5:24
  |
5 |     #[confik(default = +++4_u32)]
  |                        ^
